--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "http://larannma.github.io/ceye",
+  "homepage": "http://larannma.github.io/ceye/start",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
